# ourouc_sdk

./: .gitignore  Cargo.toml  README.md
examples/: get_schedule.rs
src/: client.rs  constants.rs  lib.rs  main.rs
src/api/: schedule.rs
src/auth/: login.rs
src/models/: config.rs  schedule.rs
