[package]
name = "ourouc-sdk"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
reqwest = { version = "0.13.1", features = ["cookies", "json", "multipart", "stream"] }
rpassword = "7.4.0"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
